fix notifcation file name over wrap

--- a/src/components/UploadingNotification/UploadingNotification.scss
+++ b/src/components/UploadingNotification/UploadingNotification.scss
@@ -41,6 +41,10 @@
             justify-content: space-between;
             align-items: center;
             padding: 0 15px;
+            .text-field {
+                word-wrap: break-word !important;
+                width: 250px;
+            }
             .percent {
                 width: 22px;
                 height: 22px;
